--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: bastyl_left
+    shield: charybdis_left
   - board: nice_nano_v2
-    shield: bastyl_right
+    shield: charybdis_right
