--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: charybdis_left
+    shield: dactyl_manuform_left
   - board: nice_nano_v2
-    shield: charybdis_right
+    shield: dactyl_manuform_right
