--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: scylla_left
+    shield: lotus58_left
   - board: nice_nano_v2
-    shield: scylla_right
+    shield: lotus58_right
