--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: lotus58_left
+    shield: lily58_left
   - board: nice_nano_v2
-    shield: lotus58_right
+    shield: lily58_right
